# donation-system

./: Anchor.toml  README.MD  TestDonationSystem.js  id.json  initializeScript.js  initiazeScript.js  initscript.sh  package-lock.json  package.json
programs/donations/: Cargo.toml
programs/donations/src/: lib.rs
tests/: donations.ts
